[gd_scene load_steps=9 format=3 uid="uid://dl2v75gbsgsqc"]

[ext_resource type="Script" path="res://ui/items_window.gd" id="1_tjnsq"]
[ext_resource type="ButtonGroup" uid="uid://cgjtf6ex0m1k2" path="res://ui/items_button.tres" id="2_af5sp"]
[ext_resource type="Theme" uid="uid://5m2lhduot4nl" path="res://modeditor/mod_editer.tres" id="2_m4bx0"]
[ext_resource type="Texture2D" uid="uid://vj5k3r2jde3r" path="res://mods/image/food.png" id="2_xar11"]
[ext_resource type="Texture2D" uid="uid://ci6tjo76gfbqh" path="res://mods/image/icons/pin_normal.png" id="5_6nue8"]
[ext_resource type="Texture2D" uid="uid://deerhs254gare" path="res://mods/image/icons/pin_pressed.png" id="6_vni5l"]
[ext_resource type="Texture2D" uid="uid://dv1fuwcb6imd" path="res://mods/image/icons/pin_hover.png" id="7_g8ng1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i6vu6"]

[node name="ItemsWindow" type="Window"]
disable_3d = true
title = "Items Window"
position = Vector2i(30, 36)
size = Vector2i(900, 500)
wrap_controls = true
transient = true
exclusive = true
popup_window = true
keep_title_visible = true
script = ExtResource("1_tjnsq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("2_m4bx0")

[node name="Food" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("2_af5sp")
text = "Food"

[node name="Drink" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("2_af5sp")
text = "Drink
"

[node name="Medicine" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("2_af5sp")
text = "Medicine"

[node name="Gift" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("2_af5sp")
text = "Gift"

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_i6vu6")

[node name="FoodContainer" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="ItemList" type="ItemList" parent="HBoxContainer/FoodContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_text_lines = 2
auto_height = true
item_count = 11
max_columns = 5
same_column_width = true
fixed_column_width = 120
icon_mode = 0
fixed_icon_size = Vector2i(100, 100)
item_0/text = "Food"
item_0/icon = ExtResource("2_xar11")
item_0/selectable = false
item_1/text = "Food"
item_1/icon = ExtResource("2_xar11")
item_1/selectable = false
item_2/text = "Food"
item_2/icon = ExtResource("2_xar11")
item_2/selectable = false
item_3/text = "Food"
item_3/icon = ExtResource("2_xar11")
item_3/selectable = false
item_4/text = "Food"
item_4/icon = ExtResource("2_xar11")
item_4/selectable = false
item_5/text = "Food"
item_5/icon = ExtResource("2_xar11")
item_5/selectable = false
item_6/text = "Food"
item_6/icon = ExtResource("2_xar11")
item_6/selectable = false
item_7/text = "Food"
item_7/icon = ExtResource("2_xar11")
item_7/selectable = false
item_8/text = "Food"
item_8/icon = ExtResource("2_xar11")
item_8/selectable = false
item_9/text = "Food"
item_9/icon = ExtResource("2_xar11")
item_9/selectable = false
item_10/text = ""

[node name="DrinkContainer" type="ScrollContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="ItemList" type="ItemList" parent="HBoxContainer/DrinkContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_text_lines = 2
auto_height = true
item_count = 10
max_columns = 5
same_column_width = true
fixed_column_width = 120
icon_mode = 0
fixed_icon_size = Vector2i(100, 100)
item_0/text = "Drink"
item_0/icon = ExtResource("2_xar11")
item_0/selectable = false
item_1/text = "Drink"
item_1/icon = ExtResource("2_xar11")
item_1/selectable = false
item_2/text = "Drink"
item_2/icon = ExtResource("2_xar11")
item_2/selectable = false
item_3/text = "Drink"
item_3/icon = ExtResource("2_xar11")
item_3/selectable = false
item_4/text = "Drink"
item_4/icon = ExtResource("2_xar11")
item_4/selectable = false
item_5/text = "Drink"
item_5/icon = ExtResource("2_xar11")
item_5/selectable = false
item_6/text = "Drink"
item_6/icon = ExtResource("2_xar11")
item_6/selectable = false
item_7/text = "Drink"
item_7/icon = ExtResource("2_xar11")
item_7/selectable = false
item_8/text = "Drink"
item_8/icon = ExtResource("2_xar11")
item_8/selectable = false
item_9/text = "Drink"
item_9/icon = ExtResource("2_xar11")
item_9/selectable = false

[node name="MedicineContainer" type="ScrollContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="ItemList" type="ItemList" parent="HBoxContainer/MedicineContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_text_lines = 2
auto_height = true
item_count = 10
max_columns = 5
same_column_width = true
fixed_column_width = 120
icon_mode = 0
fixed_icon_size = Vector2i(100, 100)
item_0/text = "Medicine"
item_0/icon = ExtResource("2_xar11")
item_0/selectable = false
item_1/text = "Medicine"
item_1/icon = ExtResource("2_xar11")
item_1/selectable = false
item_2/text = "Medicine"
item_2/icon = ExtResource("2_xar11")
item_2/selectable = false
item_3/text = "Medicine"
item_3/icon = ExtResource("2_xar11")
item_3/selectable = false
item_4/text = "Medicine"
item_4/icon = ExtResource("2_xar11")
item_4/selectable = false
item_5/text = "Medicine"
item_5/icon = ExtResource("2_xar11")
item_5/selectable = false
item_6/text = "Medicine"
item_6/icon = ExtResource("2_xar11")
item_6/selectable = false
item_7/text = "Medicine"
item_7/icon = ExtResource("2_xar11")
item_7/selectable = false
item_8/text = "Medicine"
item_8/icon = ExtResource("2_xar11")
item_8/selectable = false
item_9/text = "Medicine"
item_9/icon = ExtResource("2_xar11")
item_9/selectable = false

[node name="GiftContainer" type="ScrollContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="ItemList" type="ItemList" parent="HBoxContainer/GiftContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_text_lines = 2
auto_height = true
item_count = 10
max_columns = 5
same_column_width = true
fixed_column_width = 120
icon_mode = 0
fixed_icon_size = Vector2i(100, 100)
item_0/text = "Gift"
item_0/icon = ExtResource("2_xar11")
item_0/selectable = false
item_1/text = "Gift"
item_1/icon = ExtResource("2_xar11")
item_1/selectable = false
item_2/text = "Gift"
item_2/icon = ExtResource("2_xar11")
item_2/selectable = false
item_3/text = "Gift"
item_3/icon = ExtResource("2_xar11")
item_3/selectable = false
item_4/text = "Gift"
item_4/icon = ExtResource("2_xar11")
item_4/selectable = false
item_5/text = "Gift"
item_5/icon = ExtResource("2_xar11")
item_5/selectable = false
item_6/text = "Gift"
item_6/icon = ExtResource("2_xar11")
item_6/selectable = false
item_7/text = "Gift"
item_7/icon = ExtResource("2_xar11")
item_7/selectable = false
item_8/text = "Gift"
item_8/icon = ExtResource("2_xar11")
item_8/selectable = false
item_9/text = "Gift"
item_9/icon = ExtResource("2_xar11")
item_9/selectable = false

[node name="PinButton" type="TextureButton" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
toggle_mode = true
texture_normal = ExtResource("5_6nue8")
texture_pressed = ExtResource("6_vni5l")
texture_hover = ExtResource("7_g8ng1")
ignore_texture_size = true
stretch_mode = 5
